# tup20

./: .clang-format  .travis.yml  CMakeLists.txt  readme.org
include/tup20/: permute.hpp  size_sorted_tuple.hpp  tuple.hpp
include/tup20/impl/: macros.hpp
test/: CMakeLists.txt  early_hook.cmake  test.cpp
